--- a/frontend/views/layouts/main.twig
+++ b/frontend/views/layouts/main.twig
@@ -20,7 +20,7 @@
      <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU"></script>
 
 </head>
-<body>
+<body class="app">
 {{ void(this.beginBody()) }}
 
  {{ content | raw }}
