--- a/frontend/views/layouts/main.twig
+++ b/frontend/views/layouts/main.twig
@@ -10,6 +10,12 @@
     <meta name="format-detection" content="telephone=no">
     <meta http-equiv="x-rim-auto-match" content="none">
 
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+
     {{ MiscBlocks.title() | raw }}
     {{ MiscBlocks.keywords() | raw }}
     {{ MiscBlocks.description() | raw }}
