--- a/backend/views/layouts/login.twig
+++ b/backend/views/layouts/login.twig
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ html.encode(app.name) }}</title>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,400italic,500,500italic' rel='stylesheet' type='text/css'>
-    <link rel="icon" type="image/png" href="/images/favicon.png" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     {{ html.csrfMetaTags | raw }}
     {{ void(this.head) }}
 </head>
