--- a/frontend/views/layouts/main.twig
+++ b/frontend/views/layouts/main.twig
@@ -16,7 +16,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="manifest" href="/site.webmanifest" />
 
-    {{ MiscBlocks.title() | raw }}
+    <title>Недвижимость</title>
     {{ MiscBlocks.keywords() | raw }}
     {{ MiscBlocks.description() | raw }}
 
